2006-03-30  Jeff Johnston  <jjohnstn@redhat.com>

	* acinclude.m4: Properly add square brackets for
	AC_DEFUN macros.  Rewrite LIB_AC_PROG_CC to remove
	macros no longer available.  Add LIB_AM_PROG_AS to
	remove prereq of AC_PROG_CC.  Add LIB_AC_PROG_CC_GNU
	macro.  Substitute lpfx (library object prefix).
	* configure.host: Set lpfx depending on whether
	libtool is used or not.
	* configure.in: Individually specify libc and libm
	to AC_CONFIG_SUBDIRS.  Add square bracket quoting as
	necessary.
	* Makefile.am: Use $(lpfx) to get object names for
	math-library functions that should also be in libc.
	* libc/machine/configure.in: Use case statement to determine
	AC_CONFIG_SUBDIRS statement.
	* libc/sys/linux/linuxthreads/machine/configure.in: Ditto.
	* libc/sys/linux/machine/configure.in: Ditto.
	* libc/sys/configure.in: Ditto.
	* libm/machine/configure.in: Ditto.
	* libc/sys/linux/configure.in: Fix up AC_CONFIG_SUBDIRS.
	* libm/configure.in: Add AM_CONDITIONAL statement
	for HAVE_LIBM_MACHINE_DIR.
	* libc/machine/a29k/Makefile.am: Modified to work with
	latest automake.  Change includes setting AM_CCASFLAGS
	so building .S files will properly pick up flags used
	to build C files.
	* libc/machine/arm/Makefile.am: Ditto.
	* libc/machine/crx/Makefile.am: Ditto.
	* libc/machine/d10v/Makefile.am: Ditto.
	* libc/machine/d30v/Makefile.am: Ditto.
	* libc/machine/fr30/Makefile.am: Ditto.
	* libc/machine/frv/Makefile.am: Ditto.
	* libc/machine/h8300/Makefile.am: Ditto.
	* libc/machine/h8500/Makefile.am: Ditto.
	* libc/machine/hppa/Makefile.am: Ditto.
	* libc/machine/i386/Makefile.am: Ditto.
	* libc/machine/iq2000/Makefile.am: Ditto.
	* libc/machine/m32c/Makefile.am: Ditto.
	* libc/machine/m32r/Makefile.am: Ditto.
	* libc/machine/m68hc11/Makefile.am: Ditto.
	* libc/machine/m68k/Makefile.am: Ditto.
	* libc/machine/m88k/Makefile.am: Ditto.
	* libc/machine/mips/Makefile.am: Ditto.
	* libc/machine/mn10200/Makefile.am: Ditto.
	* libc/machine/mn10300/Makefile.am: Ditto.